refactor TrajectoryServiceImpl.java streams and exception handling